# Model

./: .gitignore  .gitmodules  LICENSE  README.md
Auger/: NeI.py  ras.py  xps.py
Auger/qchem/: dyson.inp
Mixed-GTO-PW/: .clangd  CMakeLists.txt
Mixed-GTO-PW/py/: core.py  libMixedInt.pyi
Mixed-GTO-PW/src/: cint.h  integral.hpp  main.cpp  plane.hpp  pybind.cpp  utils.hpp
attention/: attention.py  naive_attention.py
cqed/cqed-rhf/: cqed_dmrg.py  cqed_rhf.py  lo.py  out
cqed/pcqed/: Naphtalene_dipole.npy  Naphtalene_energies.npy  note  pCQED-DMRG.py  pCQED-PF.py
dvr/: Cargo.toml  README.md  pyproject.toml
dvr/pydvr/dvr/: __init__.py  dvr.py
dvr/src/: lib.rs  result.rs
dvr/src/dvr/: mod.rs  sinc.rs
dvr/src/grid/: mod.rs  uniform.rs
dvr/src/operator/: hamiltonian.rs  kinetic.rs  mod.rs  potential.rs
dvr/src/solver/: dense.rs  mod.rs
dvr/tests/: simple_test.py  test_dvr.py
fgh/: Cargo.toml  README.md  pyproject.toml
fgh/pyfgh/fgh/: __init__.py  fgh.py
fgh/src/: lib.rs
fgh/tests/: test_fgh.py
gpu/cpp/test/: CMakeLists.txt
gpu/cpp/test/src/: cublas.cu  gpu_gemm.hpp
gpu/py/: rhf_gpu.py
gto_integral/: CMakeLists.txt
gto_integral/src/: integral.hpp  main.cpp
idmrg/dmrg/: CMakeLists.txt
minigpt/: helper.py  train.py
neo/: .gitignore  neo_rhf.py
neo/entropy/: n2.py  n2_ref.py  ordm2_ref.npy
neo/n/: neo_dmrg_u1.py
neo/su2/: neo_dmrg_su2.py
neo/sz/: neo_dmrg_sz.py
qe-dft-grad/: tddft-grad.py
slater_condon/: .clangd  CMakeLists.txt  main.cpp
slater_condon/src/ci/: sc.hpp
slater_condon/src/linalg/: davidson.hpp  matrix.hpp  sparse_matrix.hpp
slater_condon/test/: FCIDUMP  run_test.py
somf/: .gitignore  DyCl6.chk  DyCl6.molden  DyCl6_FCIDUMP  DyCl6_lo.molden  integral_helper.py  lo.py  main.py  out  tools.py
teach_rhf/: dhf.py  ghf.py  rhf.py  uhf.py
toy_fssh/fssh/: main.cpp
vmc/: VMC_introduction.ipynb  rbm.py
vmc/cpp/: .clangd  CMakeLists.txt
vmc/cpp/src/: allocator.hpp  hamiltonian.hpp  main.cpp  model.hpp  parameter.hpp  sampler.hpp
vmc/py/: __init__.py  driver.py  exact.py  hamiltonian.py  main.py  model.py  sampler.py
