[package]
name = "dvr-rs"
version = "0.1.0"
edition = "2021"
description = "Discrete Variable Representation vibrational solver (Rust core)"
license = "MIT"

[lib]
name = "_dvr_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29"
rayon = "1.10"
faer = "0.24.4"

[profile.dev.package.faer]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
